--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             <fieldset>
                 <form>
             <legend><h2>Lista de Compras</h2></legend>
-            <input type="checkbox" name="feijão" id="feijão">
-            <label for="feijão"> Feijão</label>
+            <input type="checkbox" name="Miojo" id="Miojo">
+            <label for="Miojo"> Miojo</label>
             <br>
             <input type="checkbox" name="Arroz" id="Arroz">
             <label for="Arroz">Arroz</label>
             <br>
-            <input type="checkbox" name="Cartas Pokemon" id="Cartas Pokemon">
-            <label for="Cartas Pokemon">Cartas Pokemon</label>
+            <input type="checkbox" name="cartas de yu gi oh" id="cartas de yu gi oh">
+            <label for="cartas de yu gi oh">cartas de yu gi oh</label>
             </fieldset>
                 <fieldset>
                     <legend><h2>Estados</h2></legend>
